# Simple_Interpreter

./: CMakeLists.txt  README.md
include/: interpreter.h  operations.h
src/: interpreter.cpp  main.cpp  operations.cpp
tests/: answer_key.txt  given.txt  given_modified.txt  test1.txt  test2.txt  test3.txt
